Added headings to dropdowns.

--- a/src/workshops/border/borderEditor.html
+++ b/src/workshops/border/borderEditor.html
@@ -12,8 +12,7 @@
         <div class="form-group">
             <label for="borderLineStyle">Line style</label>
             <dropdown id="borderLineStyle"
-                params="{ options: borderLineStyles, value: borderLineStyle, optionsText: 'name', optionsValue: 'value' }"
-                aria-label="Line Style">
+                params="{ options: borderLineStyles, value: borderLineStyle, optionsText: 'name', optionsValue: 'value', heading: 'Line style' }">
             </dropdown>
         </div>
 
