--- a/src/workshops/transitions/transition.html
+++ b/src/workshops/transitions/transition.html
@@ -1,8 +1,7 @@
 <div class="form-group">
     <label for="timingFunction">Timing function</label>
     <dropdown id="timingFunction"
-        params="{ options: timingFunctionOptions, optionsValue: 'value', optionsText: 'text', value: $component.timingFunction }"
-        aria-label="Timing Function">
+        params="{ options: timingFunctionOptions, optionsValue: 'value', optionsText: 'text', value: $component.timingFunction, heading: 'Timing function' }">
     </dropdown>
 </div>
 
