--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -80,15 +80,13 @@
 <div class="form-group">
     <label for="textTransform">Transformation</label>
     <dropdown id="textTransform"
-        params="{ options: textTransformOptions, optionsValue: 'value', optionsText: 'text', value: $component.textTransform, heading: 'Text docoration'  }"
-        aria-label="Transformation">
+        params="{ options: textTransformOptions, optionsValue: 'value', optionsText: 'text', value: $component.textTransform, heading: 'Transformation' }">
     </dropdown>
 </div>
 
 <div class="form-group">
     <label for="textDecoration">Text decoration</label>
     <dropdown id="textDecoration"
-        params="{ options: textDecorationOptions, optionsValue: 'value', optionsText: 'text', value: $component.textDecoration, heading: 'Text docoration' }"
-        aria-label="Decoration">
+        params="{ options: textDecorationOptions, optionsValue: 'value', optionsText: 'text', value: $component.textDecoration, heading: 'Text decoration' }">
     </dropdown>
 </div>
