--- a/src/workshops/container/container.html
+++ b/src/workshops/container/container.html
@@ -4,7 +4,7 @@
             aria-label="Toggle 'Content alignment' section"></a>
         <b>Content alignment</b>
         <button class="btn btn-info" role="tooltip"
-            data-bind="tooltip: 'Align the content inside the container. Depending on viewport, the alignment can be different, following mobile-first approach. If not specified in current one, container applies configuration from closest smaller viewports.'"></button>
+            data-bind="tooltip: 'Align the content inside the container. This setting might differ depending on screen size following the mobile-first approach. If not specified for the current screen size (inherit), the setting gets taken from the closest smaller screen size.'"></button>
     </label>
 
     <div id="alignmentCollapse" class="collapse form-group-collapse">
