--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -131,7 +131,7 @@
 <!-- ko if: allowBox -->
 <details open>
     <summary>
-        <b>Box</b>
+        Box
     </summary>
     <box params="{ features: boxFeatures, box: elementStyleBox, onUpdate: onBoxUpdate }"></box>
 </details>
