--- a/src/workshops/container/container.html
+++ b/src/workshops/container/container.html
@@ -1,70 +1,61 @@
-<div class="form-group form-group-collapsible">
-    <label class="form-label">
-        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#alignmentCollapse'"
-            aria-label="Toggle 'Content alignment' section"></a>
-        <b>Content alignment</b>
+<details open>
+    <summary>
+        Content alignment
         <button class="btn btn-info" role="tooltip"
             data-bind="tooltip: 'Align the content inside the container. This setting might differ depending on screen size following the mobile-first approach. If not specified for the current screen size (inherit), the setting gets taken from the closest smaller screen size.'"></button>
-    </label>
+    </summary>
 
-    <div id="alignmentCollapse" class="collapse form-group-collapse">
-        <div class="form-group">
-            <label>Horizontal</label>
-            <a href="#" class="toolbox-btn" role="button"
-                data-bind="click: alignLeft, css: { 'toolbox-btn-is-active': horizontalAlignment() === 'start' }, tooltip: 'Align left'"
-                aria-label="Align left">
-                <i aria-hidden="true" class="paperbits-icon paperbits-align-left"></i>
-            </a>
-            <a href="#" class="toolbox-btn" role="button"
-                data-bind="click: alignCenter, css: { 'toolbox-btn-is-active': horizontalAlignment() === 'center' || horizontalAlignment() === 'around' || horizontalAlignment() === 'between' }, tooltip: 'Align center or distribute'"
-                aria-label="Align center or distribute">
-                <i aria-hidden="true" class="paperbits-icon paperbits-align-center-horizontal"></i>
-            </a>
-            <a href="#" class="toolbox-btn" role="button"
-                data-bind="click: alignRight, css: { 'toolbox-btn-is-active': horizontalAlignment() === 'end' }, tooltip: 'Align right'"
-                aria-label="Align right">
-                <i aria-hidden="true" class="paperbits-icon paperbits-align-right"></i>
-            </a>
-        </div>
-
-        <div class="form-group">
-            <label>Vertical</label>
-            <a href="#" class="toolbox-btn" role="button"
-                data-bind="click: alignTop, css: { 'toolbox-btn-is-active': verticalAlignment() === 'start' }, tooltip: 'Align top'"
-                aria-label="Align top">
-                <i aria-hidden="true" class="paperbits-icon paperbits-align-top"></i>
-            </a>
-            <a href="#" class="toolbox-btn" role="button"
-                data-bind="click: alignMiddle, css: { 'toolbox-btn-is-active': verticalAlignment() === 'center' || verticalAlignment() === 'around' || verticalAlignment() === 'between' }, tooltip: 'Align center or distribute'"
-                aria-label="Align center or distribute">
-                <i aria-hidden="true" class="paperbits-icon paperbits-align-center-vertical"></i>
-            </a>
-            <a href="#" class="toolbox-btn" role="button"
-                data-bind="click: alignBottom, css: { 'toolbox-btn-is-active': verticalAlignment() === 'end' }, tooltip: 'Align bottom'"
-                aria-label="Align bottom">
-                <i aria-hidden="true" class="paperbits-icon paperbits-align-bottom"></i>
-            </a>
-        </div>
+    <div class="form-group">
+        <label>Horizontal</label>
+        <a href="#" class="toolbox-btn" role="button"
+            data-bind="click: alignLeft, css: { 'toolbox-btn-is-active': horizontalAlignment() === 'start' }, tooltip: 'Align left'"
+            aria-label="Align left">
+            <i aria-hidden="true" class="paperbits-icon paperbits-align-left"></i>
+        </a>
+        <a href="#" class="toolbox-btn" role="button"
+            data-bind="click: alignCenter, css: { 'toolbox-btn-is-active': horizontalAlignment() === 'center' || horizontalAlignment() === 'around' || horizontalAlignment() === 'between' }, tooltip: 'Align center or distribute'"
+            aria-label="Align center or distribute">
+            <i aria-hidden="true" class="paperbits-icon paperbits-align-center-horizontal"></i>
+        </a>
+        <a href="#" class="toolbox-btn" role="button"
+            data-bind="click: alignRight, css: { 'toolbox-btn-is-active': horizontalAlignment() === 'end' }, tooltip: 'Align right'"
+            aria-label="Align right">
+            <i aria-hidden="true" class="paperbits-icon paperbits-align-right"></i>
+        </a>
     </div>
-</div>
+
+    <div class="form-group">
+        <label>Vertical</label>
+        <a href="#" class="toolbox-btn" role="button"
+            data-bind="click: alignTop, css: { 'toolbox-btn-is-active': verticalAlignment() === 'start' }, tooltip: 'Align top'"
+            aria-label="Align top">
+            <i aria-hidden="true" class="paperbits-icon paperbits-align-top"></i>
+        </a>
+        <a href="#" class="toolbox-btn" role="button"
+            data-bind="click: alignMiddle, css: { 'toolbox-btn-is-active': verticalAlignment() === 'center' || verticalAlignment() === 'around' || verticalAlignment() === 'between' }, tooltip: 'Align center or distribute'"
+            aria-label="Align center or distribute">
+            <i aria-hidden="true" class="paperbits-icon paperbits-align-center-vertical"></i>
+        </a>
+        <a href="#" class="toolbox-btn" role="button"
+            data-bind="click: alignBottom, css: { 'toolbox-btn-is-active': verticalAlignment() === 'end' }, tooltip: 'Align bottom'"
+            aria-label="Align bottom">
+            <i aria-hidden="true" class="paperbits-icon paperbits-align-bottom"></i>
+        </a>
+    </div>
+</details>
 
 <!-- ko if: overflowControls -->
-<div class="form-group form-group-collapsible">
-    <label class="form-label">
-        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#contentFlowCollapse'"
-            aria-label="Toggle 'Content flow' section"></a>
-        <b>Scroll on overflow</b>
+<details open>
+    <summary>
+        Scroll on overflow
         <button class="btn btn-info" role="tooltip"
             data-bind="tooltip: 'Manage scrolling settings for container'"></button>
+    </summary>
+    <label class="form-label">
+        <input name="scrollOnOverlowV" type="checkbox" data-bind="checked: scrollOnOverlowV" />Vertically
     </label>
-    <div id="contentFlowCollapse" class="collapse form-group-collapse">
-        <label class="form-label">
-            <input name="scrollOnOverlowV" type="checkbox" data-bind="checked: scrollOnOverlowV" />Vertically
-        </label>
-
-        <label class="form-label">
-            <input name="scrollOnOverlowH" type="checkbox" data-bind="checked: scrollOnOverlowH" />Horizontally
-        </label>
-    </div>
-</div>
+    <label class="form-label">
+        <input name="scrollOnOverlowH" type="checkbox" data-bind="checked: scrollOnOverlowH" />Horizontally
+    </label>
+</details>
 <!-- /ko -->
