--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -16,7 +16,7 @@
     <div class="form-group">
         <label for="textTransform">State</label>
         <dropdown id="textTransform"
-            params="{ options: elementStates, value: selectedState, optionsCaption: 'default', heading: 'State' }">
+            params="{ options: elementStates, value: selectedState, optionsCaption: 'regular', heading: 'State' }">
         </dropdown>
     </div>
     <!--/ko -->
