Renamed container editor.

--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -1,4 +1,4 @@
-<div class="style-guide container" data-bind="ifnot: working">
+<div class="style-guide" data-bind="ifnot: working">
     <article>
         <h2 class="heading">Fonts</h2>
         <div class="row">
