--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -84,8 +84,8 @@
     <summary>
         Shadow
     </summary>
-    <shadow-editor-group params="{ shadow: elementStyleShadow, onUpdate: onShadowUpdate }">
-    </shadow-editor-group>
+    <shadow params="{ shadow: elementStyleShadow, onUpdate: onShadowUpdate }">
+    </shadow>
 </details>
 <!-- /ko -->
 
