Renamed "No color" option.

--- a/src/workshops/border/borderEditor.html
+++ b/src/workshops/border/borderEditor.html
@@ -18,7 +18,7 @@
 
         <div role="listbox" aria-label="Colors" class="palette" data-bind="listbox: {}">
             <a role="option" class="color-box"
-                data-bind="css: { selected: null === $component.borderColorKey()  }, attr: { 'aria-label': 'Clear color' }, tooltip: 'Clear color', activate: $component.clearColors">
+                data-bind="css: { selected: null === $component.borderColorKey()  }, attr: { 'aria-label': 'No color' }, tooltip: 'No color', activate: $component.clearColors">
                 <span class="color-box-wrapper">
                     <i aria-hidden="true" class="color paperbits-icon paperbits-ban"></i>
                 </span>
